styles/partials/project.css
@import '../variables.css';

header {
	max-width: 40em;
	text-align: left;
	margin: var(--space-l1) var(--space-l1) var(--space-l2);
	
	.no-cssanimations & {
		opacity: 1;
	}
	
	a {
		color: var(--text-color);
	}
	
	.nav,
	.desc {
		margin: var(--space-l1) 0;
	}
	
	.nav {
		h1, h2, & > a {
			display: inline;
			font-size: 2em;
			padding: 0;
			margin: 0;
		}
		
		& > a {
			font-weight: 300;
			color: rgba(68, 68, 68, 0.5);
			
			&::after {
				content: '|';
				color: rgba(68, 68, 68, 0.5);
				margin: 0 0.25em;
			}
		}
		
		.js &.has-page-nav { /* Dropdown will only with with JS, so don't hint it's clickable without it working. */
			position: relative;
			
			h1, h2 {
				cursor: pointer;
				
				&::after {
					content: '';
					display: inline-block;
					position: relative;
					top: -0.2em;
					left: 0.2em;
					height: 0;
					width: 0;
					border-left: 0.4rem solid transparent;
					border-right: 0.4rem solid transparent;
					border-top: 0.4rem solid var(--text-color);
				}
			}
		}
	}
	
	@media (hover) {
	.nav a:hover {
		color: var(--blue);
	}
	
	.nav a:active {
		color: var(--darkblue);
	}
	}

	.desc {
		font-size: 1.25em;
		line-height: 1.5;
		
		p {
			margin: 0;
		}
		
		a {
			color: var(--blue);
		
			@media (hover) {
			&:hover {
				color: var(--darkblue);
			}
			
			&:active {
				color: var(--darkgrey);
			}
			}
		}
	}
}

.page-nav {
	transition: max-height 0.3s, border-color 0.3s, box-shadow 0.3s;
	transition-timing-function: ease-out, ease, ease, ease;
	display: block;
	overflow: hidden;
	max-height: 0;
	width: 100%;
	font-size: 2em;
	list-style: none;
	border-top: 0 solid rgba(222, 222, 222, 0);
	border-bottom: 0 solid rgba(222, 222, 222, 0);
	z-index: 2;

	
	&.active {
		transition-timing-function: ease-in, ease, ease;
		max-height: 3em;
		border-width: 1px;
		border-color: #DEDEDE;
	}
	
	&.active.long {
		max-height: 5em;
	}

	a {
		color: rgba(68,68,68,0.5);
		
		@media (hover) {
		&:hover {
			color: rgba(68,68,68,0.85);
		}
		}
	}
}

.content {
	max-width: 55em;
	text-align: center;
	margin: var(--space-l1) 2.5%;

	.no-cssanimations & {
		opacity: 1;
	}
}

.license {
	display: block;
	max-width: 55em;
	text-align: left;
	color: var(--darkgrey);
	margin: var(--space-l2) 2.5%;
	
	p {
		max-width: 15em;
		font-size: 0.9em;
		margin: 0;
	}
	
	a {
		transition: color 0.3s ease;
		color: var(--darkgrey);
		
		@media (hover) {
		&:hover {
			color: var(--blue);
		}
		
		&:active {
			color: var(--darkblue);
		}
		}
	}
}

/* Tablet */
@media (min-width: 35em) {
	header {
		width: 80%;
		margin: var(--space-l2) auto;
		
		.nav {			
			h1, h2, & > a {
				font-size: 2.5em;
			}
		}
		
		.desc {
			font-size: 1.5em;
		}
	}

	.page-nav {
		display: inline-block;
		position: absolute;
		top: 1.35em; /* Magic numbers that... */
		left: 4.3em; /* work really well    */
		width: auto;
		font-size: 2.5em;
		padding-left: 0.25em;
		background: rgba(235, 238, 240, 0.95);
		box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
		border-top: none;
		border-bottom: 0 solid rgba(0, 153, 204, 0);
		
		@supports (backdrop-filter: none) {
		    backdrop-filter: blur(10px);
		    background: rgba(235, 238, 240, 0.65);
		}
		
		&.active {
			border-width: 3px;
			border-color: var(--blue);
		}
	}

	.license {
		width: 80%;
		margin-right: auto;
		margin-left: auto;
	}
	
	.content {
		margin-right: auto;
		margin-left: auto;
	}
}

